--- a/themes/default/user/css/core.css
+++ b/themes/default/user/css/core.css
@@ -26,15 +26,21 @@ form.user {
 	border: 1px solid #111;
 	border-radius: 5px;
 }
+form.user p {
+	margin: 5px 0;
+	line-height: 20px;
+}
 form.user input,form.user select,form.user textarea {
     /*déjà en inline-block*/
-    width: 250px;
     padding: 4px;
  /*   vertical-align: top;*/
 	border: 1px solid #aaa;
 	background: #f2f2f2;
 
 	border-radius: 0px;
+}
+form.user input.field {
+    width: 250px;
 }
 form.user textarea {
     width: 450px;
@@ -77,4 +83,100 @@ p#shaarli-local-instance {
 	width: 300px;
 	margin-left:150px;
 	text-align: right;
+}
+/*************
+ * Tribes
+ * */
+div.tribesbox {
+	display: inline-block;
+	margin: 5px;
+	border-radius: 2px;
+	border: 1px solid #CCC;
+	width: 275px;
+	overflow: hidden;
+	padding: 5px;
+	font-size: 0.9em;
+	background-color: #FFF;
+	vertical-align:top;
+}
+div.tribe-private{
+	background-color: #EFEFEF;
+}
+div.tribe-public{
+}
+div.tribesbox ul.info-list {
+	list-style: none;
+	margin: 10px 0;
+}
+div.tribesbox ul.info-list li {
+	padding: 3px 0;
+}
+div.tribesbox ul.actions {
+/*	list-style:none outside none;*/
+	list-style-type:none;
+	list-style-image:none;
+	float: left;
+	margin: 0px 0px 0px 5px;
+}
+div.tribesbox ul.actions li{
+	display:inline-block;
+	padding: 0 3px;
+}
+div.tribesbox p {
+	display: block;
+	margin: 10px auto;
+}
+div.tribesbox p.tribe-icon {
+	float: right;
+}
+div.tribesbox .feedlink {
+	float: right;
+}
+div#add-form {
+	padding: 5px;
+	margin: 5px;
+	margin-bottom:30px;
+}
+div#add-form a{
+	text-decoration:none;
+	background-image:url(../images/action-add.png);
+	background-repeat:no-repeat;
+	padding-left:20px;
+	padding-bottom:10px;
+}
+div#add-form a:hover, div#add-form a:focus {
+text-decoration:underline;
+}
+
+div.br3px {
+	-moz-border-radius: 3px;
+	-khtml-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+div.button {
+	display:-moz-inline-box;
+	display:inline-block;
+	font-family: "Lucida Grande", Verdana, Arial, "Bitstream Vera Sans", sans-serif;
+	text-decoration: none !important;
+	font-size: 12px !important;
+	white-space: nowrap;
+	padding: 2px 10px;
+	line-height: 18px;
+	cursor: pointer;
+	border-style: solid;
+	border-width: 1px;
+	background:  url('../images/white-grad.png') repeat-x scroll left top;
+}
+div.button span {
+	background-position: left center;
+	background-repeat: no-repeat;
+	padding-left: 25px;
+}
+div.button:active {
+	background-image: url('../images/white-grad-active.png');
+}
+form.user div.close-button {
+	float:right;
+	display: block;
 }
