Going further on tribes on user space

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1740,7 +1740,7 @@ div.flash {
 	width:95%;
 /*	border: 1px solid #000000;*/
 	color: #550000;
-	height: 20px;
+/*	height: 20px;*/
 }
 #flash-msg ul {
 	list-style: none;
