--- a/themes/default/user/css/core.css
+++ b/themes/default/user/css/core.css
@@ -157,26 +157,67 @@ div.br3px {
 div.button {
 	display:-moz-inline-box;
 	display:inline-block;
-	font-family: "Lucida Grande", Verdana, Arial, "Bitstream Vera Sans", sans-serif;
-	text-decoration: none !important;
-	font-size: 12px !important;
-	white-space: nowrap;
-	padding: 2px 10px;
-	line-height: 18px;
-	cursor: pointer;
-	border-style: solid;
-	border-width: 1px;
 	background:  url('../images/white-grad.png') repeat-x scroll left top;
+	padding: 2px 10px;
+	border: 1px solid;
+	cursor:pointer;
 }
-div.button span {
-	background-position: left center;
-	background-repeat: no-repeat;
-	padding-left: 25px;
-}
-div.button:active {
-	background-image: url('../images/white-grad-active.png');
-}
-form.user div.close-button {
+div.close-button {
 	float:right;
 	display: block;
 }
+
+/***********
+ * boxy forms
+ * **********/
+form.boxy {
+	padding: 10px;
+	border: 1px solid #111;
+	border-radius: 5px;
+	font-size: 0.9em;
+}
+form.boxy p {
+	margin: 5px 0;
+	line-height: 20px;
+}
+form.boxy input,form.boxy select,form.boxy textarea {
+    padding: 4px;
+	border: 1px solid #aaa;
+	background: #f2f2f2;
+	border-radius: 0px;
+}
+form.boxy input.field {
+    width: 250px;
+}
+form.boxy textarea {
+    width: 450px;
+    height: 15em;
+}
+form.boxy label {
+    display: inline-block;
+    width: 170px;
+    margin-right: 20px;
+    text-align: right;
+}
+form.boxy label.textarea {
+	vertical-align: top;
+}
+form.boxy span.description {
+	margin-left: 120px;
+}
+form.boxy div.bbutton {
+	display: inline-block;
+}
+form.boxy div.bbutton input {
+	border: solid 1px #AAA;
+	padding: 2px 10px;
+	margin: 4px 4px;
+}
+/*
+form.boxy div.button {
+	padding: 5px;
+	background-color: #D2D6CB;
+	border-radius: 5px;
+	text-align: center;
+}*/
+
