--- a/shaarli/inc/shaarli.css
+++ b/shaarli/inc/shaarli.css
@@ -77,10 +77,17 @@ background-image: url('../images/logo.png');
 background-repeat: no-repeat;
 float:left;
 margin:2px 10px 0 10px;
-width:235px;
 height:40px;
 cursor:pointer;
-
+padding-left: 45px;
+font-size: 1.1em;
+font-family: "Trebuchet MS",Verdana,Arial,Helvetica,sans-serif;
+font-weight: bold;
+color: #FFF;
+line-height:40px;
+}
+#pageheader #logo .page-title{
+margin: 10px 3px 3px;
 }
 
 #pageheader
