--- a/admin/meta/css/styles.css
+++ b/admin/meta/css/styles.css
@@ -1521,3 +1521,10 @@ div.tribesbox p.tribe-icon {
 div.tribesbox .feedlink {
 	float: right;
 }
+span.pending-nbr {
+	border-radius: 4px;
+	background-color: red;
+	font-weight: bold;
+	color: #000;
+	font-size: 0.9em;
+}
